fix progress z-index

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-size: 14px;
-  border: 3px solid blue;
+  border: 3px solid green;
 }
 
 .wrapper {
@@ -103,7 +103,7 @@ button {
   height: 100%;
   width: 100%;
   position: fixed;
-  z-index:9999999;
+  z-index: -1;
   opacity: 0;
   visibility: visible;
   justify-content: center;
@@ -112,6 +112,7 @@ button {
 
 .before_loading .progress {
   opacity: 1;
+  z-index:200;
 }
 
 .progress-bar {
